2003-05-13  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* configure.ac: fix getaddrinfo test for Tru64.

2003-05-12  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* README.Darwin: removed, unneeded now.

	* compile: needed for dccsend_CPPFLAGS.

	* configure.ac: use #-comments instead of dnl. Looks nicer.

	* COPYING: add copyright for lib/poll.[ch].

	* configure.ac, Makefile.am, lib/: moved replacement functions to
	lib/ subdir, added poll replacement function from Brian M Clapper
	for building on Darwin.
	
	* dccserver.mdoc: document "close" command.
	* dccserver.man: regen.

	* dccserver.c: add sigint variable.
	(sig_handle): handle SIGINT.
	(handle_input): add "close" command, which closes particular
	client connections (by killing the child).
	(main): install signal handler for SIGINT.
	(main): exit gracefully on SIGINT.
	(main): mention port to which client is connected.

	* dccserver.h: add sigint variable.

	* child.c (cleanup_read_file): fix return value.
	(get_line_from_client): fix return value.
	(child_loop): exit gracefully on SIGINT.

2003-05-11  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* configure.ac: 0.3b test release.

	* child.c (child_loop): handle SIGINFO for CHAT.

	* dccserver.mdoc: document timeouts. bump date.
	* dccserver.man: regen.

	* child.c (child_loop): readd CHAT support.

	* dccserver.c (main): kill children when quitting.
	(kill_children): new function.
	(collect_child): handle sigchild.

	* dccserver.c (main): use sigaction instead of signal, for better
	portability.

	* child.c: rewrite to not use stdio, to get sane timeout handling.

	* dccserver.h: new header file for common definitions.

	* dccserver.c, child.c: moved the child code to child.c.

2003-05-06  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* dccserver.c (sig_handle): rename variable to avoid shadowing.
	(main): remove variable to avoid shadowing.

2003-05-02  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* configure.ac: 0.3a test release.
